[project]
    authors=[{name="Sckathach", email="thomas.winninger@telecom-sudparis.eu"}]
    dependencies=[
        "qiskit-aer (>=0.17.0,<0.18.0)",
        "qiskit-machine-learning (>=0.8.2,<0.9.0)",
        "qiskit[all] (==1.4.2)",
        "requests (>=2.32.3,<3.0.0)",
    ]
    description=""
    name="causapscal-des-profondeurs"
    readme="README.md"
    requires-python=">=3.13,<4.0"
    version="0.1.0"

[build-system]
    build-backend="poetry.core.masonry.api"
    requires=["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.api]
    optional=true
    [tool.poetry.group.api.dependencies]
        fastapi="^0.115.12"
        toml="^0.10.2"
        uvicorn="^0.34.2"

[tool.poetry.group.notebook]
    optional=true
    [tool.poetry.group.notebook.dependencies]
        jupyter="^1.1.1"

[tool.poetry.group.dev]
    optional=true
    [tool.poetry.group.dev.dependencies]
        mypy="^1.15.0"
        ruff="^0.11.8"

[[tool.mypy.overrides]]
    ignore_missing_imports=true
    module=["qiskit.*", "qiskit_aer.*"]

[tool.pyright]
    ignore=["qiskit", "qiskit_aer"]

[tool.poetry]
    package-mode=false
